apps/utils/routes/ingressroutes.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-dashboard-subdomain
spec:
  routes:
  - kind: Rule
    match: Host(`traefik.k8s.lab.reb.gg`)
    services:
    - kind: TraefikService
      name: api@internal
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: argo
spec:
  routes:
  - kind: Rule
    match: Host(`argo.k8s.lab.reb.gg`)
    services:
    - kind: Service
      name: argocd-server
      port: 80
